@@ -171,6 +171,26 @@ public class DefaultKeyboardFocusManager extends KeyboardFocusManager
           }
         else if (e.id == FocusEvent.FOCUS_LOST)
           {
+            // We need to set the window's focus owner here; we can't
+            // set it when the window loses focus because by that time
+            // the previous focus owner has already lost focus
+            // (FOCUS_LOST events are delivered before
+            // WINDOW_LOST_FOCUS events).
+
+            // Find the target Component's top-level ancestor.
+            Container parent = target.getParent ();
+
+            while (parent != null
+                   && !(parent instanceof Window))
+              parent = parent.getParent ();
+
+            Window toplevel = parent == null ?
+              (Window) target : (Window) parent;
+
+            Component focusOwner = getFocusOwner ();
+            if (focusOwner != null)
+              toplevel.setFocusOwner (focusOwner);
+
             if (((FocusEvent) e).isTemporary ())
               setGlobalFocusOwner (null);
             else
